# traditionalrag_earningsreport

./: 1-BasicChatbot.ipynb  app.py  pyproject.toml  requirements.txt
data/: insurance_info.json  langchain_json_loader_schema.jq
data/text_files/: ml_file.txt  python_intro.txt
data/vector_store/aaec3a87-0ce6-44d5-a0d4-ca594636ae1e/: index_metadata.pickle
faiss_store/: faiss.index  metadata.pkl
notebooks/: document.ipynb
src/: data_loader.py  search.py  vectorstore.py
